--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,13 @@ p.lead {
     font-size   : 19px;
     line-height : 1.7em;
     }
+	
+p.follow 
+{
+    font-size   : 16px;
+    line-height : 1.7em;
+	text-align	: justify;
+}
 
 ul {
     margin     : 0;
