--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,29 @@ button:focus,
 .btn:active:focus {
     outline : none;
     }
+	
+.btn-schedule {
+	padding        	: 5px 5px;
+    margin-bottom  	: 0;
+    font-size      	: 11px;
+    border-radius  	: 0;
+    font-weight    	: 500;
+    border-width   	: 1px;
+    text-transform 	: uppercase;
+	width 			: 63px;
+    }
+	
+.btn-invited {
+    background-color : #fd367e;
+    border-color     : #fd367e;
+	color            : #ffffff;
+    }
+	
+.btn-paper {
+    background-color : #0e1555;
+    border-color     : #0e1555;
+	color            : #ffffff;
+    }
 
 /* --------------------
  * Section Background
